# RetroTurboAE

./: .gitignore  AutoExperiment.md  CMakeLists.txt  DemoAlgorithm.md  README.md  SoftIO.md
RetroLib/: decode.h  demodulator.h  emulator.h  emulator_mseq.h  gf.hpp  m_sequence.h  modulator.h  mongodat.h  mqtt.h  preamble.cpp  preamble.h  rs.hpp  softio.h  sysutil.h
RetroLib/Eigen/src/Geometry/arch/: Geometry_SSE.h
RetroLib/lua/: CMakeLists.txt  linit.c  liolib.c  loslib.c  lua_cjson.c  strbuf.c
RetroLib/pffft/: pffft.c
RetroLib/quirc/: test_minimum.c
RetroLib/quirc/demo/: demo.c
RetroLib/restrpc/: router.h  rpc_client.hpp  use_asio.hpp
RetroLib/soxr/: CMakeLists.txt  pffft.c  simd.c  soxr-config.h  soxr.h
SoftReader/: convert.py  ls_255_910K_10K_25K_70dB.fcf  ls_255_910K_10K_25K_70dB.h  reader-H7xx-ex.h  reader-H7xx.h
SoftTag/: tag-L4xx-ex.h  tag-L4xx.h
Tester/Archive/: Archive_Preamble.h  CMakeLists.txt  ComputeSignalStrengthAndNoise.cpp  ComputeSignalStrengthAndNoiseV2.cpp  Demodulate_Preamble_WY_190718.cpp  Demodulate_Preamble_WY_190718.h  Demodulate_WY_190715.cpp  Demodulate_WY_190715.h  Find_Valid_Miller_WY_190715.cpp  GetPreamble_Ref_WY_190716.cpp  GetRef_Preamble_PrWangAdvanced_190719.cpp  GetRef_Preamble_WY_190718.cpp  GetRef_WY_190715.cpp  MillerModulate.cpp  MillerModulateRecordData.cpp  MillerModulator.h  MillerModulatorRecordData.h  Output_Preamble_UnionCurve.cpp  Preamble_Modify.cpp  Preamble_Tool.cpp  PrintSingleString2File.cpp  Recover_Original_data_WY_190715.cpp  Recover_Original_data_WY_190718.cpp
Tester/AutoExperiment/: CMakeLists.txt  CameraCalibrate.py  CameraLib.h  CameraUndistort.cpp  CarMove.cpp  CarPause.cpp  CarResume.cpp  DecodeFile.cpp  OmniWheelCar.h  QRCodeDecodeLocate.cpp  QRCodeDecodeLocate190818.cpp  QRCodeMoveTo.cpp  QRCodeMoveTo190818.cpp
Tester/DebugTest/: BenchmarkH7Reader.cpp  DeleteGridfsFile.cpp  GetDataFromMongo.cpp  ListAllDocumentsID.cpp  LuaTest.cpp  MongoTest.cpp  ReaderH7SoftIO.cpp  SaveData2Mongo.cpp  SaveDataToMongo.cpp  SaveRecordToMongo.cpp  SerialList.cpp  SliceBinaryData.cpp  SoftIOtest.cpp  SystemTest.cpp  USBSoftioSpeedTest.cpp
Tester/Emulation/: AutoGenRefFile.cpp  CMakeLists.txt  Demodulate.cpp  DemodulateDrawBranches.cpp  DemodulateMiller.cpp  ECCDecode.cpp  ECCEncode.cpp  Emulate.cpp  EmulateCtd.cpp  MobiCom19_Do.cpp  MongoEmulate.cpp  MongoEmulate17.cpp  MongoEmulateMIMO.cpp  ScatterComputeStdDev.cpp  ScatterPlot.cpp  millerdecode.h  mycomplex.h  ref.txt
Tester/ExploreLCD/: 200118_PostGenerateRef17Mseq.cpp  200118_PreGenerateRef17Mseq.cpp  200118_SlideVariance.cpp  200120_TestAccuracy.cpp  200121_Emulator.cpp  200121_MinDistance1kSsOOK.cpp  200121_MinDistance1kbpsDSM.cpp  200121_MinDistance2kSsMiller.cpp  200121_MinDistancePQAMDSM.cpp  200121_MinDistancePQAMDSM.py  200121_Produce1kSsRef.cpp  200121_TestCondition1.cpp  200126_GenerateExpReference.cpp  200126_GenerateRefTestOptimal.py  200129_LongerRefTestOptimal.py  200203_LongerRefTestOptimal.py  200203_MinDistancePQAMDSM_demod.cpp  200206_GenerateSinusoidReference.cpp  200206_LongerRefTestOptimal.py  200206_generate_reference_V3.py  200224_Regenerate8kSsRef17Mseq.cpp  200606_Demonstrate.cpp  200606_Demonstrate.py  AutoGenRef8421_BuildSequence.cpp  AutoGenRef8421_Combine.cpp  AutoGenRef8421_HandleOne.cpp  CMakeLists.txt  Emulator2kSsM17.cpp  Emulator_FileIO.cpp  General_Repeat_Record_Gen.cpp  General_Repeat_Record_Get.cpp  Generate_M_Sequence.cpp  Get_DSM_StdDev.cpp  Get_OneBit_StdDev.cpp
Tester/HandleData/: CMakeLists.txt  ComputeSquareSum.cpp  FastDSM_Modulate.cpp  FastDSM_Naive_Demodulate_WY_190714.cpp  HowToWriteYourProgram.cpp  LoadRepeat_MobiCom19demo.cpp  PreambleAutoGen.cpp  PreambleAutoGet.cpp  ProxyRunLuaCode.cpp  ReorderLCD_MobiCom19demo.cpp  SingleDSM_Demodulate.cpp  SingleDSM_Modulate.cpp
Tester/MatLab/: CMakeLists.txt  autopreamble.m  autoref4b.m  ber.m  bwrite.m  channel_preamble.m  cph.m  ctd.cpp  demodqam.m  fconv.m  genref32.m  genrefmanual.m  grpacc.m  hwlibinit.m  lib.cpp  libtest.cpp  millercheck.m  millerref.m  millerref2.mat  min_phase_filter.m  mphase.m  opt_test.py  preamble_tool.cpp  readraw.m  rtm.h  wh1.m
Tester/ReaderH7/: AutoGainControl.cpp  CMakeLists.txt  Dump.cpp  OnlyRx.cpp  RawTx.cpp  ReceiveOnePreamble.cpp  SetDAC.cpp  TestDataPush.cpp
Tester/TagL4/: AlwaysBlink.cpp  Blink.cpp  CompressedTx.cpp  Dump.cpp  LCD8421Tester.cpp  README.md  RawTx.cpp  SetEN9.cpp  TestIfReboot.cpp
Tester/TurboHost/: Host.cpp  TurboCli.py  host_luaext.h
WebGUI/: anyword-hint.js  comment.js  index.html  lua.js  show-hint.css  show-hint.js  synchronizer.js  vuecodemirror.min.js
WebGUI/lua/: 190608_generate_tag_tx.lua  190608_send_tag_tx_and_record.lua  190608_set_gain.lua  190609_simple_demo.lua  190610_compute_BER.lua  190610_experiment_single_dsm.lua  190610_generate_single_dsm.lua  190613_process_single_dsm_data.lua  190613_single_dsm_distance_test.lua  190614_dump_decode_data.lua  190614_list_decode_failed.lua  190618_compute_data_size.lua  190618_pqam_dsm_distance_test.lua  190618_test_remote_blink.lua  190621_pqam_dsm_test.lua  190621_self_test_128pixels.lua  190621_test_auto_preamble.lua  190621_test_preamble_listening.lua  190702_download_experiment_record.lua  190702_test_read_write_file.lua  190702_upload_experiment_record.lua  190715_archive_recover_data.lua  190715_naive_demodulate.lua  190716_archive_distance.lua  190718_archive_output_union_curve.lua  190718_naive_demodulate_1kbps.lua  190718_naive_demodulate_BER.lua  190719_demodulate_1kbps_solve_time_disalign.lua  190720_draw_multi_frequency.lua  190720_draw_single_DSM.lua  190720_test_multi_frequency.lua  190720_test_single_DSM.lua  190729_reference_collect.lua  190805_generate_ref_15_12.lua  190807_general_repeat_record_test.lua  190808_general_get_repeated_data.lua  190808_reference_collect_renew.lua  190808_test_8DSM.lua  190808_test_basic_DSM.lua  190809_handle_ref_renew.lua  (+90 more)
