
FILE(GLOB_RECURSE SRC_FILES "*.cpp")
foreach (cpp ${SRC_FILES})
	string(REGEX REPLACE ".+/(.+)\\..*" "\\1" cppname ${cpp})
	add_executable(${subprefix}${cppname} ${cpp})
endforeach(cpp)
if (WIN32)
target_link_libraries(EM_ScatterPlot ws2_32 wsock32)
target_link_libraries(EM_Demodulate ws2_32 wsock32)
target_link_libraries(EM_DemodulateMiller ws2_32 wsock32)
target_link_libraries(EM_DemodulateMiller soxr)
target_link_libraries(EM_ScatterComputeStdDev ws2_32 wsock32)
target_link_libraries(EM_MobiCom19_Do ws2_32 wsock32)
target_link_libraries(EM_DemodulateDrawBranches ws2_32 wsock32)
endif()
