include_directories(.)
# add_executable(${subprefix}preamble_tool preamble_tool.cpp)
# target_link_libraries(${subprefix}preamble_tool serial)
# add_library(rtm SHARED rtm.h lib.cpp)
add_executable(${subprefix}ctd ctd.cpp)
add_executable(${subprefix}ctd1 ctd.cpp)
target_compile_definitions(${subprefix}ctd PUBLIC SERVER)
if (WIN32)
    # target_link_libraries(rtm ws2_32 wsock32)
    target_link_libraries(${subprefix}ctd ws2_32 wsock32)
    target_link_libraries(${subprefix}ctd1 ws2_32 wsock32)
endif()
# target_link_libraries(rtm serial)
# add_executable(${subprefix}libtest libtest.cpp)
# target_link_libraries(${subprefix}libtest rtm)
